--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "mjbe-resume",
+  "homepage": "https://lucyjpjones.github.io/mjbe-resume/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-animation": "^1.2.2",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-ityped": "^1.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.1.1",
+    "gh-pages": "^3.1.0",
+    "style-loader": "^2.0.0"
   }
 }
