--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^12.8.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
+    "hamburger-react": "^2.4.0",
     "react": "^17.0.1",
     "react-animation": "^1.2.2",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.2.0",
     "react-ityped": "^1.0.2",
     "react-router-dom": "^5.2.0",
