--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.2.0",
+    "react-items-carousel": "^2.8.0",
     "react-ityped": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
