--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
     "hamburger-react": "^2.4.0",
+    "mdbreact": "^5.0.1",
     "react": "^17.0.1",
     "react-animation": "^1.2.2",
     "react-bootstrap": "^1.5.1",
