--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
     "hamburger-react": "^2.4.0",
     "mdbreact": "^5.0.1",
     "react": "^17.0.1",
