--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-ityped": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^10.15.5",
+    "sweetalert2-react-content": "^3.3.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
